# innovation-complexity-pulsesense

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  Cargo.toml  Dockerfile
backend/src/: errors.rs  fhir.rs  lib.rs  main.rs  routes.rs  telemetry.rs  ws.rs
backend/src/domain/: models.rs  store.rs
backend/tests/: healthz.rs
frontend/: app.js  index.html  styles.css
