[package]
name = "pulsesense-backend"
version = "0.1.0"
edition = "2021"

[lib]
name = "pulsesense_backend"
path = "src/lib.rs"

[dependencies]
# --- Web framework ---
actix-web = "4"
actix-web-actors = "4"
actix = "0.13"
actix-rt = "2"

# --- Async runtime ---
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }

# --- Serialization & data ---
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# --- Logging / telemetry ---
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

# --- Errors & utils ---
thiserror = "1"
anyhow = "1"
futures-util = "0.3"

# --- Simulator / HTTP client ---
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
rand = "0.8"

[dev-dependencies]
# (empty for now)
